--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 
     <%= stylesheet_link_tag "application" %>
   </head>
+  <header>
+    <h1>Leilões de Estoque</h1>
+  </header>
 
   <body>
     <%= yield %>
